updated numbers in detector_dimensions
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@3628 4525493e-7705-40b1-a816-d608a930855b

--- a/totem figures/merge.tex
+++ b/totem figures/merge.tex
@@ -20,7 +20,9 @@
 
 \vfil
 
-\fig[14cm]{station_3D.pdf}{frontBack}{Strip orientation of the first two detectors (0 and 1) in RP 120, 121 and 122.}
+\fig[14cm]{station_56_220.pdf}{3d_56_220}{Strip orientation in 56 sector. The first two detectors (0 and 1) in RPs 120, 121 and 122 are shown.}
+
+%\fig[14cm]{station_45_220.pdf}{3d_56_220}{Strip orientation in 45 sector. The first two detectors (0 and 1) in RPs 20, 21 and 22 are shown.}
 
 
 \vfil\eject
