--- a/2010/thesis/thesis.tex
+++ b/2010/thesis/thesis.tex
@@ -50,11 +50,11 @@
 
 \BeginText
 
-\input introduction.tex
-\input elastic.tex
+%\input introduction.tex
+%\input elastic.tex
 \input simu_reco.tex
 \input alignment.tex
-\input sigma_tot.tex
+%\input sigma_tot.tex
 
 \appendices
 
@@ -62,6 +62,20 @@
 
 \references
 \PrintReferences
+
+\SpecialChapter{List of Tables}
+
+\SpecialChapter{List of Abbreviations}
+
+\DefAbb{CERN}{(Conseil Europ\' eenne pour la Recherche Nucl\' eaire) European Organization for Nuclear Research in Geneva.}
+\DefAbb{LHC}{(Large Hadron Collider) The largest collider in the world.}
+\DefAbb{TOTEM}{(TOTal and Elastic Measurements) An LHC experiment focused on the forward hadronic phenomena.}
+\DefAbb{RP}{(Roman Pot) A a pot-shaped movable beam-pipe insertion, see section \TODO{?}}
+\DefAbb{BPM}{(Beam Position Monitor)}
+\DefAbb{BLM}{(Beam Loss Monitor)}
+\DefAbb{LVDT}{(Linear Voltage Differential Transformator) A device that determines positions of TOTEM Roman Pots.}
+
+\PrintAbbreviations
 
 \EndText
 
